Stylesheet/emote/tag updates 2013-09-26

--- a/source-css/braeburnquisition.css
+++ b/source-css/braeburnquisition.css
@@ -331,14 +331,7 @@ a[href|="/pearlywhites"] {
     background-image:url(%%pearlywhites%%)
 }
 
-a[href|="/righthere"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 200px;
-    height: 171px;
-    background-image:url(%%righthere%%)
-}
+
 
 a[href|="/scrunchycolgate"] {
     display: block;
@@ -1108,7 +1101,7 @@ a[href|="/abexcitedgrin"] {
  clear: none;
  float: left; 
  width: 198px;
- height: 200px;
+ height: 196px;
  background-image: url(%%spritesheet6%%);
  background-position: -0px -1796px;
 } 
@@ -1131,6 +1124,146 @@ a[href|="/applebummed"] {
  height: 140px;
  background-image: url(%%spritesheet6%%);
  background-position: -0px -2211px;
+} 
+
+a[href|="/wannastudy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 180px;
+ height: 207px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -0px;
+} 
+
+a[href|="/tdfrenchkiss"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 278px;
+ height: 130px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -229px;
+} 
+
+a[href|="/smartass"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 222px;
+ height: 132px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -368px;
+} 
+
+a[href|="/twilightissuperhappy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 180px;
+ height: 206px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -501px;
+} 
+
+a[href|="/twibutt"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 193px;
+ height: 158px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -705px;
+} 
+
+a[href|="/twisexface"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 155px;
+ height: 116px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -17px -864px;
+} 
+
+a[href|="/twisockbutt"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 222px;
+ height: 164px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -982px;
+} 
+
+a[href|="/suspicioustwi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 136px;
+ height: 212px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -1146px;
+} 
+
+a[href|="/twieww"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 153px;
+ height: 168px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -1360px;
+} 
+
+a[href|="/twidafaq"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 138px;
+ height: 173px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -1526px;
+} 
+
+a[href|="/letsdoscience"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 176px;
+ height: 154px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -1700px;
+} 
+
+a[href|="/twicocoa"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 144px;
+ height: 161px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -1854px;
+} 
+
+a[href|="/twiflirt"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 222px;
+ height: 137px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -2015px;
+} 
+
+a[href|="/twilghthug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 152px;
+ height: 175px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -2153px;
 } 
 
 div.titlebox span.word {display:none; }
