--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -209,3 +209,83 @@ height:150px;
 background-repeat:no-repeat;
 background-image:url(%%ccxrdsnuggle%%);
 }
+
+a[href|="/ccsocks"] {
+float:left;
+width:120px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%ccsocks%%);
+}
+
+a[href|="/ccsoawesome"] {
+float:left;
+width:126px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%ccsoawesome%%);
+}
+
+a[href|="/cchappy"] {
+float:left;
+width:130px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%cchappy%%);
+}
+
+a[href|="/ccwave"] {
+float:left;
+width:122px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%ccwave%%);
+}
+
+a[href|="/flitterhappy"] {
+float:left;
+width:115px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%flitterhappy%%);
+}
+
+a[href|="/flittercute"] {
+float:left;
+width:102px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%flittercute%%);
+}
+
+a[href|="/flitterponytail"] {
+float:left;
+width:147px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%Flitterponytail%%);
+}
+
+a[href|="/flitteryeah"] {
+float:left;
+width:129px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%flitter-yeah%%);
+}
+
+a[href|="/flitterbug"] {
+float:left;
+width:119px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%flitterbug%%);
+}
+
+a[href|="/clarity"] {
+float:left;
+width:200px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%clarity%%);
+}
