--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -164,7 +164,7 @@ top:100px;
     display: none;
 }
 div.titlebox .subscribers span.number:after {
-    content: " wastelanders"
+    content: " wasteland fillies"
     }
 div.titlebox .users-online span.number:after {
     content: " fighting the good fight"
