--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -1,6 +1,6 @@
 /* CSS last generated on Sat, 16 Feb 2013 02:06:21 -0600 by UNKNOWN on derpy */div.titlebox span.word {display:none}
-div.titlebox .subscribers span.number {font-size:0px!important}
-div.titlebox .subscribers span.number:after {font-size:12px!important; content:"EXACTLY 9,000 fillies"}
+div.titlebox .subscribers span.number:after {content:" Fillies"}
+div.titlebox .subscribers span.number:after {font-size:12px!important; }
 div.titlebox p.users-online span.number:after { content: " being adorable" }
 div.titlebox p.users-online span.word { display: none }
 
