--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -421,7 +421,7 @@ a[href|="/theclopping"] {
     background-position: -3009px -0px;
     width: 126px
     }
-a[href|="/trixnazi"], a[href|="/buttonwut"] {
+a[href|="/trixnazi"], a[href|="/buttonwut"], a[href|="/stormthebastille"] {
     display: block;
     clear: none;
     float: left;
@@ -436,6 +436,11 @@ a[href|="/buttonwut"] {
     background-position: -137px -0px;
     width: 142px
     }
+a[href|="/stormthebastille"] {
+    background-position: -279px -0px;
+    width: 261px
+    }
+
 
 /***********MLP-XLRG*************/
 a[href|="/fearless"], a[href|="/doctorfun"], a[href|="/nsfz"], a[href|="/notsafeforzealot"], a[href|="/wr3nch"], a[href|="/doublevision"], a[href|="/sstrixie"], a[href|="/lunanazi"], a[href|="/dalekstare"], a[href|="/daleksmile"] {
