--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -577,6 +577,14 @@ a[href|="/bghuman"] {
     height: 131px;
     background-image: url(%%bghuman%%) 
     }
+a[href|="/ppbraces"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 141px;
+    height: 150px;
+    background-image: url(%%ppbraces%%) 
+    }
 
 
 
