--- a/source-css/batquisition.css
+++ b/source-css/batquisition.css
@@ -1,188 +1,37 @@
-/*Hello! This is where you put that code that sleipnir showed off, it's really just a matter of copy and pasting the important things into it*/
+/*Hello! This is Andy and I have completely redone your CSS to make it take up less space! It's pretty self explanatory, but if you have a question just ask in mod mail!*/
 
-/*Example*/
+/********* Emotes **********/
 
-a[href|="/guardnotamused"] {  
- display: block;
- clear: none;
- float: left; 
- width: 87px;
- height: 60px;
- background-image: url(%%gaurdnotamused2%%);
-} 
+a[href|='/guardbathappy'], a[href|='/batdoesnotapprove'], a[href|='/echobendover'], a[href|='/echofilly'], a[href|='/guardbatpoker'], a[href|='/echodatass'], a[href|='/echowoah'], a[href|='/echosexy1'], a[href|='/echoshake'], a[href|='/topbat'], a[href|='/echosnacktime'], a[href|='/echowat'], a[href|='/echosexy2'], a[href|='/echosexy3'], a[href|='/speckstare'], a[href|='/speckcomputer'], a[href|='/kalsalute'], a[href|='/mosinareadingmap'], a[href|='/moonshinemad'], a[href|='/nightlightblush'], a[href|='/blossomhappy'], a[href|='/heartbeatstare'], a[href|='/nightlightkillyourfamily']{
 
-a[href|="/guardpoker"] {  
- display: block;
- clear: none;
- float: left; 
- width: 85px;
- height: 100px;
- background-image: url(%%guardpoker2%%);
-} 
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%batsheetonefix2%%) }
 
-a[href|="/topbat"] {  
- display: block;
- clear: none;
- float: left; 
- width: 93px;
- height: 75px;
- background-image: url(%%topbat%%);
-} 
+a[href|="/guardbathappy"] {width:115px; height:140px; background-position: -0px -0px}
+a[href|="/batdoesnotapprove"] {width:108px; height:113px; background-position: -116px -0px}
+a[href|="/echobendover"] {width:156px; height:135px; background-position: -223px -0px}
+a[href|="/echofilly"] {width:90px; height:78px; background-position: -405px -0px}
+a[href|="/guardbatpoker"] {width:75px; height:103px; background-position: -0px -140px}
+a[href|="/echodatass"] {width:129px; height:147px; background-position: -75px -139px}
+a[href|="/echowoah"] {width:134px; height:145px; background-position: -204px -140px}
+a[href|="/echosexy1"] {width:122px; height:138px; background-position: -338px -138px}
+a[href|="/echoshake"] {width:147px; height:117px; background-position: -0px -286px}
+a[href|="/topbat"] {width:142px; height:138px; background-position: -151px -286px}
+a[href|="/echosnacktime"] {width:155px; height:130px; background-position: -293px -286px}
+a[href|="/echowat"] {width:121px; height:133px; background-position: -0px -416px}
+a[href|="/echosexy2"] {width:149px; height:121px; background-position: -122px -423px}
+a[href|="/echosexy3"] {width:157px; height:123px; background-position: -271px -417px}
+a[href|="/speckstare"] {width:105px; height:140px; background-position: -0px -549px}
+a[href|="/speckcomputer"] {width:176px; height:144px; background-position: -117px -544px}
+a[href|="/kalsalute"] {width:195px; height:131px; background-position: -293px -545px}
+a[href|="/mosinareadingmap"] {width:126px; height:149px; background-position: -0px -689px}
+a[href|="/moonshinemad"] {width:121px; height:180px; background-position: -131px -690px}
+a[href|="/nightlightblush"] {width:113px; height:180px; background-position: -251px -690px}
+a[href|="/blossomhappy"] {width:72px; height:71px; background-position: -369px -675px}
+a[href|="/heartbeatstare"] {width:70px; height:68px; background-position: -369px -747px}
+a[href|="/nightlightkillyourfamily"] {width:108px; height:84px; background-position: -369px -817px}
 
-a[href|="/echoawe"] {  
- display: block;
- clear: none;
- float: left; 
- width: 79px;
- height: 75px;
- background-image: url(%%echoawe%%);
-} 
+/********* End of Emotes **********/
 
-
-a[href|="/2spooky4u"] {  
- display: block;
- clear: none;
- float: left; 
- width: 54px;
- height: 100px;
- background-image: url(%%2spooky4u2%%);
-} 
-
-
-a[href|="/echodatass"] {  
- display: block;
- clear: none;
- float: left; 
- width: 89px;
- height: 75px;
- background-image: url(%%echodatass%%);
-} 
-
-
-a[href|="/echofilly"] {  
- display: block;
- clear: none;
- float: left; 
- width: 93px;
- height: 80px;
- background-image: url(%%echofilly2%%);
-} 
-
-
-a[href|="/echowat"] {  
- display: block;
- clear: none;
- float: left; 
- width: 69px;
- height: 75px;
- background-image: url(%%EchoWat2%%);
-} 
-
-
-a[href|="/echostretch"] {  
- display: block;
- clear: none;
- float: left; 
- width: 120px;
- height: 95px;
- background-image: url(%%echostretch2%%);
-} 
-
-a[href|="/echopose"] {  
- display: block;
- clear: none;
- float: left; 
- width: 118px;
- height: 90px;
- background-image: url(%%Echo-172%%);
-} 
-
-a[href|="/echo1"] {  
- display: block;
- clear: none;
- float: left; 
- width: 97px;
- height: 90px;
- background-image: url(%%echo12%%);
-} 
-
-a[href|="/guardhappy"] {  
- display: block;
- clear: none;
- float: left; 
- width: 83px;
- height: 80px;
- background-image: url(%%guardhappy2%%);
-} 
-
-a[href|="/blossomhappy"] {  
- display: block;
- clear: none;
- float: left; 
- width: 75px;
- height: 75px;
- background-image: url(%%blossomhappy2%%);
-} 
-
-a[href|="/echosnacktime"] {  
- display: block;
- clear: none;
- float: left; 
- width: 78px;
- height: 100px;
- background-image: url(%%echosnacktime2%%);
-} 
-
-a[href|="/echoswag"] {  
- display: block;
- clear: none;
- float: left; 
- width: 82px;
- height: 70px;
- background-image: url(%%s-d-sdgr2%%);
-} 
-
-a[href|="/doesnotapprove"] {  
- display: block;
- clear: none;
- float: left; 
- width: 80px;
- height: 80px;
- background-image: url(%%doesnotapprove%%);
-} 
-
-a[href|="/speckwtf"] {  
- display: block;
- clear: none;
- float: left; 
- width: 83px;
- height: 100px;
- background-image: url(%%speckwtf%%);
-} 
-
-a[href|="/whatamireading"] {  
- display: block;
- clear: none;
- float: left; 
- width: 89px;
- height: 85px;
- background-image: url(%%whatamireading%%);
-} 
-
-a[href|="/speckseesyou"] {  
- display: block;
- clear: none;
- float: left; 
- width: 68px;
- height: 105px;
- background-image: url(%%specksees-you%%);
-} 
-
-a[href|="/kalsalute"] {  
- display: block;
- clear: none;
- float: left; 
- width: 221px;
- height: 150px;
- background-image: url(%%kalsalute%%);
-} 
