Stylesheet/emote/tag updates 2013-09-29

--- a/source-css/braeburnquisition.css
+++ b/source-css/braeburnquisition.css
@@ -79,16 +79,6 @@ a[href|="/scootaburn"] {
     background-image:url(%%scootaburn%%)
 }
 
-/*Width 240, Height 166*/
-a[href|="/littlestrongburn"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 240px;
-    height: 166px;
-    background-image:url(%%littlestrongburn%%)
-}
-
 a[href|="/snakeburn"] {
     display: block;
     clear: none;
@@ -1256,7 +1246,7 @@ a[href|="/twiflirt"] {
  background-position: -0px -2015px;
 } 
 
-a[href|="/twilghthug"] {  
+a[href|="/twilighthug"] {  
  display: block;
  clear: none;
  float: left; 
@@ -1265,6 +1255,156 @@ a[href|="/twilghthug"] {
  background-image: url(%%spritesheet7%%);
  background-position: -0px -2153px;
 } 
+
+a[href|="/royalescort"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 180px;
+ height: 250px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -0px;
+}
+
+a[href|="/raritywtf"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 204px;
+ height: 191px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -250px;
+}
+
+a[href|="/raritygrin"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 192px;
+ height: 222px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -441px;
+}
+
+a[href|="/rarityshock"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 201px;
+ height: 199px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -663px;
+}
+
+a[href|="/rarityproblem"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 225px;
+ height: 132px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -861px;
+}
+
+a[href|="/rarilunanuzzle"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 250px;
+ height: 138px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -997px;
+}
+
+a[href|="/raritycannon"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 261px;
+ height: 136px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -1134px;
+}
+
+a[href|="/rarityowie"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 215px;
+ height: 217px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -1270px;
+}
+
+a[href|="/rariblush"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 191px;
+ height: 215px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -1488px;
+}
+
+a[href|="/raribeam"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 166px;
+ height: 212px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -1703px;
+}
+
+a[href|="/itriedireallydid"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 203px;
+ height: 184px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -1915px;
+}
+
+a[href|="/generoushug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 169px;
+ height: 216px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -2099px;
+}
+
+a[href|="/fluffycry"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 187px;
+ height: 228px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -2317px;
+}
+
+a[href|="/snug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 282px;
+ height: 170px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -2544px;
+}
+
+a[href|="/twixiepillow"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 352px;
+ height: 152px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -2726px;
+}
 
 div.titlebox span.word {display:none; }
 div.titlebox span.number:after {content:" Sexy Beasts";}
