--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1180,7 +1180,8 @@ a[href|="/honesty"],
 a[href|="/howyoudoin"],
 a[href|="/literallybrohoof"],
 a[href|="/abhowyoudoin"],
-a[href|="/pootishorn"]
+a[href|="/pootishorn"],
+a[href|="/lyramaster"]
 {
     display: block;
     clear: none;
@@ -1288,6 +1289,11 @@ a[href|="/pootishorn"]
 {
 	width: 193px;
 	background-position: -0px -840px;
+}
+a[href|="/lyramaster"]
+{
+	width: 175px;
+	background-position: -193px -840px;
 }
 /* end sheet 8 */
 
