--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -199,12 +199,12 @@ h3.imgTitle{
 .side a[href="http://www.reddit.com/r/MLPLounge/new/"]
 {
  display:block;
- width:70px;
- height:70px;
- background:url(%%tiny-rarity-bee%%);
+ width:74px;
+ height:80px;
+ background:url(%%filly-twilight%%);
  position:fixed; 
  top:260px;
- right:-3px;
+ right:-10px;
  z-index:999
 }
 body{background:url(%%scoots-bg%%) no-repeat fixed center center}
