--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -15,6 +15,7 @@ DC05 - Announcement bar created
 DC06 - Bannercat hover
 28July2013 - Bannercat hover merged into imgmap
 
+
 */
 
 /* Sub Name Change*/
@@ -357,6 +358,7 @@ a.author[href$="thepostaldud3"],
 a.author[href$="Dundrioundio"],
 a.author[href$="Dwarflord"],
 a.author[href$="KommandantSprakle"],
+a.author[href$="scix"],
 a.author[href$="sna_fu_bar"]
 
 { 
@@ -377,6 +379,7 @@ a.author[href$="Dundrioundio"]:before,
 a.author[href$="Dwarflord"]:before,
 a.author[href$="Draze"]:before,
 a.author[href$="KommandantSprakle"]:before,
+a.author[href$="scix"],
 a.author[href$="sna_fu_bar"]:before
 
 {
@@ -393,6 +396,7 @@ a.author[href$="KommandantSprakle"]:before {content: "PeasantSprakle"}
 a.author[href$="sna_fu_bar"]:before {content: "anus_barf"}
 a.author[href$="Dundrioundio"]:before {content: "Dundrio"}
 a.author[href$="Dwarflord"]:before {content: "Cinor"}
+a.author[href$="scix"]:before {content: "Hi"}
 a.author[href$="thepostaldud3"]:before {content: "steev"}
 
 
