--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -7,7 +7,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
 
 /* Banner image and associated height values */
  #header #header-bottom-left {
-   background: url(%%lunabanner%%)!important;
+   background: url(%%ponybanner1%%)!important;
    background-repeat: no-repeat!important;
    background-position: 50% 100%!important;
 }
